--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
     "ethereumjs-testrpc": "^6.0.3",
     "express": "^4.16.3",
     "ganache-cli": "^6.1.8",
